--- a/package.json
+++ b/package.json
@@ -1,9 +1,4 @@
 {
-  "dependencies": {
-    "next": "^7.0.2",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1"
-  },
   "name": "taxi-driver-ui",
   "version": "0.0.1",
   "description": "UI for github.com/benoror/taxi-driver",
@@ -18,5 +13,11 @@
     "type": "git"
   },
   "author": "Ben Orozco <benoror@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
+    "next": "^7.0.2",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1"
+  }
 }
