--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "Ben Orozco <benoror@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "react-no-ssr": "^1.1.0",
+    "react-table": "^6.8.6"
   }
 }
