--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-css-modules": "^1.2.1",
     "ember-data": "~3.16.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^7.0.0",
@@ -50,6 +51,12 @@
   },
   "engines": {
     "node": "10.* || >= 12"
+  },
+  "dependencies": {
+    "autoprefixer": "^9.5.1",
+    "postcss-color-function": "^4.1.0",
+    "postcss-hexrgba": "^1.0.1",
+    "postcss-nested": "^4.1.2"
   },
   "ember": {
     "edition": "octane"
