--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
+    "ember-composable-helpers": "^3.1.1",
     "ember-css-modules": "^1.2.1",
     "ember-data": "~3.16.0",
     "ember-export-application-global": "^2.0.1",
@@ -43,6 +44,8 @@
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
     "ember-source": "~3.16.0",
+    "ember-string-helpers": "^1.0.2",
+    "ember-truth-helpers": "^2.1.0",
     "eslint-plugin-ember": "^7.8.1",
     "eslint-plugin-node": "^11.0.0",
     "loader.js": "^4.7.0",
