--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
+    "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
@@ -38,7 +39,7 @@
     "ember-css-modules": "^1.2.1",
     "ember-data": "~3.16.0",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^7.0.0",
+    "ember-fetch": "^8.0.1",
     "ember-flatpickr": "^2.15.4",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
