--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-modal-dialog": "^3.0.0-beta.4",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
+    "ember-simple-auth": "^3.0.0",
     "ember-source": "~3.16.0",
     "ember-string-helpers": "^1.0.2",
     "ember-truth-helpers": "^2.1.0",
