--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
-    "ember-cli": "~3.16.0",
+    "ember-cli": "^3.9.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.17.2",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.2",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
@@ -43,10 +43,9 @@
     "ember-flatpickr": "^2.15.4",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-modal-dialog": "^3.0.0-beta.4",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^7.0.0",
-    "ember-simple-auth": "^3.0.0",
+    "ember-simple-auth": "^3.1.0",
     "ember-source": "~3.16.0",
     "ember-string-helpers": "^1.0.2",
     "ember-truth-helpers": "^2.1.0",
@@ -60,9 +59,15 @@
   },
   "dependencies": {
     "autoprefixer": "^9.5.1",
+    "bufferutil": "^4.0.3",
+    "ember-cli-babel": "^7.23.1",
+    "ember-cli-shims": "^1.2.0",
+    "ember-cli-update": "^0.27.3",
+    "ember-modal-dialog": "^2.4.5",
     "postcss-color-function": "^4.1.0",
     "postcss-hexrgba": "^1.0.1",
-    "postcss-nested": "^4.1.2"
+    "postcss-nested": "^4.1.2",
+    "utf-8-validate": "^5.0.4"
   },
   "ember": {
     "edition": "octane"
