--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "node": "10.* || >= 12"
   },
   "dependencies": {
+    "@babel/core": "^7.13.14",
     "autoprefixer": "^9.5.1",
     "bufferutil": "^4.0.3",
     "ember-cli-babel": "^7.23.1",
